--- a/index.html
+++ b/index.html
@@ -10,40 +10,37 @@
 <body>
     <header>
         <h1>Chris' Crazy Mad Libs</h1>
-        <p>Put in some words</p>
+        <p>Put in some words!</p>
     </header>
     <main>
         <br>
         <div id="inputbox">
-            <br>
             <label class="inputwords">Adjective:</label>
             <input id="adjective-1-input">
-            <br>
+            <br></br>
             <label class="inputwords">Adjective:</label>
             <input id="adjective-2-input">
-            <br>
+            <br></br>
             <label class="inputwords">Noun:</label>
             <input id="noun-1-input">
-            <br>
+            <br></br>
             <label class="inputwords">Noun:</label>
             <input id="noun-2-input">
-            <br>
+            <br></br>
             <label class="inputwords">Verb:</label>
             <input id="verb-1-input">
-            <br>
+            <br></br>
             <label class="inputwords">Noun:</label>
             <input id="noun-3-input">
-            <br>
+            <br></br>
             <label class="inputwords">Verb:</label>
             <input id="verb-2-input">
-            <br>
+            <br></br>
             <label class="inputwords">Adjective:</label>
             <input id="adjective-3-input">
-            <br>
-            <br>
+            <br></br>
+
             <button id="button">Get Mad!!</button>
-            <br>
-            <br>
         </div>
         <br>
         <div id="storybox">
@@ -53,7 +50,9 @@
         </div>
     </main>
     <footer>
-
+        Chris Ficht
+        <br>
+        Copyright 2020 &copy
     </footer>
     <script src="app.js"></script>
 </body>
